crates/kdl-config-derive/tests/ui/invalid_default_bool.rs
use kdl_config_derive::KdlNode;

#[derive(KdlNode)]
#[kdl(default_bool = "nope")]
struct Config {
    enabled: bool,
}

fn main() {}
